--- a/Catalogo.html
+++ b/Catalogo.html
@@ -100,7 +100,7 @@
         .card img {
             margin-bottom: 10px;
             width: 100%;
-            height: 40%;
+            height: 400px;
             object-fit: cover;
         }
 
