--- a/Catalogo.html
+++ b/Catalogo.html
@@ -187,7 +187,7 @@
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
-    background-color: #007bff;
+    background-color: #4CAF50;
     border: none;
     border-radius: 5px;
     text-decoration: none;
