--- a/PerfilU.html
+++ b/PerfilU.html
@@ -126,6 +126,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Catalogo.html">Todos los productos</a>
                         </li>
+                        <li class="nav-item">
+                            
+                            <a class="nav-link" href="HisProd.html">Historial de compras</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
