--- a/product2.html
+++ b/product2.html
@@ -176,11 +176,11 @@
 </header>
 
 <body>
-  <br><br><br>
+  <br><br><br>  
   <div class="container">
     <div id="producto" class="product-container">
       <div class="product-image">
-        <img id="product-image" src="" alt="">
+        <img id="product-image" src="" alt="" style="width: 500px; height: 500px;">
       </div>
       <div class="product-details">
         <h1 id="product-name"></h1>
