--- a/product4.html
+++ b/product4.html
@@ -39,7 +39,7 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      margin-top: 80px;
+
     }
 
     .product-image {
@@ -178,7 +178,7 @@
   <div class="container">
     <div id="producto" class="product-container">
       <div class="product-image">
-        <img id="product-image" src="" alt="">
+        <img id="product-image" src="" alt="" style="width: 500px; height: 500px;">
       </div>
       <div class="product-details">
         <h1 id="product-name"></h1>
