--- a/product2.html
+++ b/product2.html
@@ -188,8 +188,8 @@
         <p id="product-price"></p>
         <p id="product-sizes"></p>
         <p id="product-colors"></p>
-        <p id="product-materials"></p>
-        <p id="product-brand"></p>
+        <div id="product-materials"></div>
+        <div id="product-brand"></div>
         <button type="button" class="btn btn-primary" onclick="agregarAlCarrito()">Agregar al carrito</button><br>
 
         <!-- Stripe -->
@@ -261,20 +261,20 @@
           const productColors = document.getElementById('product-colors');
           const productMaterials = document.getElementById('product-materials');
           const productBrand = document.getElementById('product-brand');
-
+    
           productName.textContent = data.nombre;
           productImage.src = data.imagen;
           productImage.alt = data.nombre;
           productDescription.textContent = data.descripcion_larga;
           productPrice.textContent = `Precio: $${data.precio}`;
-          productSizes.textContent = `Tallas disponibles: ${data.tallas.join(", ")}`;
-          productColors.textContent = `Colores disponibles: ${data.colores.join(", ")}`;
-          productMaterials.textContent = `Materiales: ${data.materiales.join(", ")}`;
-          productBrand.textContent = `Marca: ${data.marca}`;
+          productMaterials.textContent = `Materiales: ${data.materiales ? data.materiales.join(", ") : 'No especificado'}`;
+          productBrand.textContent = `Marca: ${data.marca ? data.marca : 'No especificada'}`;
         })
         .catch(error => {
           console.error('Error:', error);
         });
+  
+    
       // Cargar calificación al cargar la página
       loadRating();
 
