--- a/product2.html
+++ b/product2.html
@@ -267,7 +267,7 @@
           productImage.alt = data.nombre;
           productDescription.textContent = data.descripcion_larga;
           productPrice.textContent = `Precio: $${data.precio}`;
-          productSizes.textContent = `Tallas disponibles: ${data.tallas.join(", ")}`;
+          productSizes.textContent = `Categorias: ${data.categorias.join(", ")}`;
           productColors.textContent = `Colores disponibles: ${data.colores.join(", ")}`;
           productMaterials.textContent = `Materiales: ${data.materiales.join(", ")}`;
           productBrand.textContent = `Marca: ${data.marca}`;
