--- a/product10.html
+++ b/product10.html
@@ -256,10 +256,7 @@
           productImage.alt = data.nombre;
           productDescription.textContent = data.descripcion_larga;
           productPrice.textContent = `Precio: $${data.precio}`;
-          productSizes.textContent = `Tallas disponibles: ${data.tallas.join(", ")}`;
-          productColors.textContent = `Colores disponibles: ${data.colores.join(", ")}`;
-          productMaterials.textContent = `Materiales: ${data.materiales.join(", ")}`;
-          productBrand.textContent = `Marca: ${data.marca}`;
+          productMaterials.textContent = `categorias: ${data.categorias ? data.categorias.join(", ") : 'No especificado'}`;
         })
         .catch(error => {
           console.error('Error:', error);
