--- a/PerfilU.html
+++ b/PerfilU.html
@@ -126,10 +126,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Catalogo.html">Todos los productos</a>
                         </li>
-                        <li class="nav-item">
-                            
-                            <a class="nav-link" href="HisProd.html">Historial de compras</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -170,10 +166,11 @@
                             name="query">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
+
                     <!-- Sección de inicio de sesión -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Iniciar sesión</a>
+                            <a class="nav-link" href="Login.html">Iniciar sesión</a>
                         </li>
                     </ul>
 
