--- a/carrito.html
+++ b/carrito.html
@@ -171,7 +171,7 @@
                     <!-- Sección de inicio de sesión -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Iniciar sesión</a>
+                            <a class="nav-link" href="Login.html">Iniciar sesión</a>
                         </li>
                     </ul>
 
