--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                             <p class="descripcion-corta">${producto.descripcion_corta}</p>
                             <p class="descripcion-larga">${producto.descripcion_larga}</p>
                             <h3>$${producto.precio.toFixed(2)}</h3>
-                            <button class=""comprar onclick="comprar('${producto.nombre}')">Comprar</button>
+                            <a class="btnproducto" href=${producto.enlace}>Comprar</a>
                             <a class="btnproducto" href=${producto.enlace}>Ver producto</a>
                             <br/><br/><br/>
                         `;
