--- a/Catalogo.html
+++ b/Catalogo.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/Fisestoplogo.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+     <!-- Bootstrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+     crossorigin="anonymous"></script>
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>Catálogo de Productos</title>
     <style>
         .navbar {
@@ -229,7 +234,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px"
-                        alt="Logo oficial de FiesTop" title="Logo oficial de FiesTop" class="nav-img"> </a>
+                        alt="Logo oficial de FiesTop" title="Logo oficial de FiesTop"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -279,6 +284,7 @@
                             name="query">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
+
                     <!-- Sección de inicio de sesión -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -288,8 +294,7 @@
 
                     <!-- Sección para ver el perfil del usuario (puedes ajustar el enlace según tus necesidades) -->
                     <a class="navbar-brand" href="Login.html">
-                        <img src="img/LogoU.png" height="40px" alt="Logo oficial de FiesTop" title="Perfil de usuario"
-                            class="nav-img">
+                        <img src="img/LogoU.png" height="40px" alt="Logo oficial de FiesTop" title="Perfil de usuario">
                     </a>
 
                 </div>
