--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                             <p class="descripcion-larga">${producto.descripcion_larga}</p>
                             <h3>$${producto.precio.toFixed(2)}</h3>
                             <a class="btnproducto" href=${producto.enlace}>Comprar</a>
-                            <a class="btnproducto" href=${producto.enlace}>Ver producto</a>
+                            <a class="btnproducto bg-primary" href=${producto.enlace}>Ver producto</a>
                             <br/><br/><br/>
                         `;
 
